--- a/.gitignore
+++ b/.gitignore
@@ -207,5 +207,5 @@ marimo/_lsp/
 __marimo__/
 
 
-models/unsloth.Q4_K_M.gguf
-!models/
+shazam/models/unsloth.Q4_K_M.gguf
+!shazam/models/download_link.txt
